--- a/src/Scss/_app.scss
+++ b/src/Scss/_app.scss
@@ -1,137 +1,132 @@
-.container{
-    height: 100%;
+.header{
+    width: 100%;
+    background-color: #F55A5A;
+    text-align: center;
+    padding: 1rem;
+    color: #ffffff;
+    margin-bottom: 3rem;
+    &::before{
+            position: absolute;
+            top: 21px;
+            left: calc(50% + -156px);
+            content: "";
+            width: 30px;
+            height: 30px;
+            background-repeat: no-repeat;
+            background: url("../images/globe.svg");
+            filter:invert(100%)
+    }
+}
+
+.main-content{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.card-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #1c2025;
-    flex: 1;
-    max-width: 317px;
-    border-radius: 10px;
-    overflow: hidden;
-
+    text-align: center;
+    border-bottom: 1px solid #918E9B;
+    padding: 2rem;
+    gap: 1rem;
+    @media screen and (min-width:768px){
+        flex-direction: row;
+    }
     &__img{
-        margin-bottom: 1.4rem;
-    }
-    &__details{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    h1{
-        font-family: Inter;
-        font-size: 25px;
-        font-weight: 700;
-        line-height: 30px;
-        letter-spacing: 0em;
-        text-align: center;
-        padding: .5rem;
-    }
-    .h2--details{
-        font-family: Inter;
-        font-size: 13px;
-        font-weight: 400;
-        line-height: 15px;
-        letter-spacing: 0em;
-        text-align: center;
-        color: #F3BF99;
-        padding: .3rem;
-    }
-    h3{
-        font-family: Inter;
-        font-size: 10px;
-        font-weight: 400;
-        line-height: 15px;
-        letter-spacing: 0em;
-        text-align: center;
-        color: #F5F5F5;
-        padding: .5rem;
-    }
-    &__btns{
-        display: flex;
-        justify-content: space-between;
-        margin: 2rem 0;
-    }
-    &__btn{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 1rem;
-        margin: 0 1rem ;
-        background-color: #FFFFFF;
-        width: 115px;
-        height: 34px;
-        color: #374151;
-        text-decoration: none;
-        border-radius: 10px;
-        color: #374151;
-        font-family: Inter;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 16px;
-        letter-spacing: 0em;
+        overflow: hidden;
+        @media screen and (min-width:768px){
+            width: 300px;
+            height: 300px;
+            border-radius: 1rem;
+        }
+        img{
+            width: 100%;
+            height: auto;
+            border-radius: 1rem;
+            overflow: hidden;
+            @media screen and (min-width:768px){
+                object-fit: cover;
+                max-height: 400px;
+                height: 400px;
+                max-width: 300px;
+                width: 300px;
+                object-position: 46% -40px;
+            }
 
-       &--blue{
-        background-color: #5093E2;
-        color: #FFFFFF;
-       }
+        }
     }
-    &__desc{
-        padding: 0 2rem;
-    }
-    .h2--desc-head{
-        margin-top: 1rem;
-        font-family: Inter;
-        font-size: 16px;
-        font-weight: 800;
-        line-height: 24px;
-        letter-spacing: 0em;
-        text-align: left;
-        color: #F5F5F5;
-        +p{
-            font-family: Inter;
-            font-size: 10px;
-            font-weight: 300;
-            line-height: 15px;
-            letter-spacing: 0em;
+    &__describtion{
+        @media screen and (min-width:768px){
             text-align: left;
-            color: #F5F5F5;
-        }
-    }
-    &__footer{
-        width: 100%;
-        background-color: #161619;
-        margin-top: 2rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &__links{
-            padding: 2rem;
             display: flex;
-            gap: 1rem;
+            flex-direction: column;
+            width: 75%;
         }
-        &__link{
-            i{
+        &__country{
+            letter-spacing: .5rem;
+            color:#2B283A;
+            position: relative;
+            margin-top: .7rem;
+            h2{
+                @media screen and (min-width:768px){
+                    padding-left: 1.2rem;
+                }
+            }
+            @media screen and (min-width:768px){
+                margin: 1rem;
+            }
+            &::before{
+                @media screen and (min-width:768px){
+                    content:"";
+                    background: url("../images/mark.svg");
+                    width: 40px;
+                    height: 40px;
+                    position: absolute;
+                    top:2px;
+                    left: -2px;
+                    background-repeat: no-repeat;
+                }
+            }
+            &__map{
+                letter-spacing: initial;
+                font-size: 0.8rem;
                 color: #918E9B;
-                height: 25px;
-                width: auto;
+                &:hover{
+                    color: #0080ff;
+                }
+            }
+        }
+        &__place{
+            font-weight: 700;
+            font-size: 1.55rem;
+            color:#2B283A;
+            position: relative;
+            @media screen and (min-width:768px){
+                padding: 1rem;
+            }
+        }
+        &__date{
+            font-weight: 700;
+            padding: .5rem;
+            color:#2B283A;
+            @media screen and (min-width:768px){
+                padding: 1rem;
+            }
+        }
+        &__about{
+            color:#2B283A;
+            padding: 1rem;
+            @media screen and (min-width:768px){
+                padding: 0 1rem;
             }
         }
     }
-}
-
-
-
-
-
-
-
-
-h1,p{
-    color: #fff;
 }
