--- a/src/Scss/_reset.scss
+++ b/src/Scss/_reset.scss
@@ -1,6 +1,11 @@
-*{
+*, ::after, ::before{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+image{
+    display: block;
+    max-width: 100%;
 }
